antex-rs/tui/src/bottom_pane/snapshots/antex_tui__bottom_pane__status_line_setup__tests__setup_view_snapshot_previews_active_agents.snap
---
source: tui/src/bottom_pane/status_line_setup.rs
expression: "render_lines(&view, 72)"
---
                                                                        
  Configure Status Line                                                 
  Select which items to display in the status line.                     
                                                                        
  Type to search                                                        
  >                                                                     
› [x] Use theme colors      Apply colors from the active /theme         
  ───────────────────────                                               
  [x] active-agents         Number of active sub-agents (omitted when…  
  [ ] model                 Current model name                          
  [ ] model-with-reasoning  Current model name with reasoning level     
  [ ] reasoning             Current reasoning level                     
  [ ] current-dir           Current working directory                   
  [ ] project-name          Project name (omitted when unavailable)     
                                                                        
  Agents 3                                                              
  Press space to toggle; ←/→ to move; enter to confirm and close; esc to
